Fix: Dark mode

--- a/Components/Navbar/navbar.css
+++ b/Components/Navbar/navbar.css
@@ -121,7 +121,7 @@ nav {
     bottom: 0;
     right: 0;
     left: 40%;
-    background-color: white;
+    background-color: var(--light-color);
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
       rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   }
